# climate-workflow-analytics

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  design_rationale.md
docs/superpowers/specs/: 2026-07-20-credibility-pass-design.md  2026-07-20-figures-and-coverage-design.md
examples/: 01_streaming.py  02_scheduling.py  03_forecasting.py  generate_data.py
src/cwa/: __init__.py  backend.py  cli.py  data.py  forecast.py  operators.py  perfmodel.py  plots.py  scheduler.py  streaming.py
tests/: test_backend.py  test_cli.py  test_forecast.py  test_operators.py  test_perfmodel.py  test_plots.py  test_scheduler.py  test_streaming.py
