[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climate-workflow-analytics"
version = "0.1.0"
description = "GPU-capable, in-transit post-processing and ML analytics for climate/weather workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Syed Tahir Hussan", email = "tahirsherazi786@gmail.com" }]
keywords = ["climate", "weather", "hpc", "gpu", "in-transit", "netcdf", "scheduling", "machine-learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
]

# Core runtime dependencies. GPU support (CuPy) is intentionally an optional
# extra so the package installs and runs on CPU-only machines and CI.
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "xarray>=2023.1.0",
    "netCDF4>=1.6",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
# `pip install climate-workflow-analytics[gpu]` on a CUDA 12 node. The wheel
# name encodes the CUDA major version; pick the one matching the driver.
gpu = ["cupy-cuda12x>=12.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1"]

[project.scripts]
cwa = "cwa.cli:main"

[project.urls]
"PhD topic" = "https://hps.vi4io.org/research/open-theses/phd/smarter-workflows"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# pyflakes (F), pycodestyle (E/W), isort (I), pyupgrade (UP), bugbear (B).
select = ["E", "F", "W", "I", "UP", "B"]
